# kep3

./: .buildinfo  .clang-tidy  .gitignore  CMakeLists.txt  README.md  anomalies.html  api.html  approximations.html  bibliography.html  clang-format  codecov.yml  config.hpp.in  constants.html  elements.html  epoch.html  flyby.html  genindex.html  gym.html  index.html  kep3-config.cmake.in  kep3_devel.yml  lambert.html  leg.html  objects.inv  planet.html  plot.html  propagation.html  pykep2_devel.yml  pykep3_devel.yml  search.html  searchindex.js  taylor_adaptive.html  trajopt.html  tut_basic.html  tut_trajopt.html  tutorials.html  udpla.html  udplas.html  utils.html
.github/workflows/: gha_CI.yml  joss.yml  main.yml  pykep.yml
_sources/: anomalies.rst  api.rst  approximations.rst  constants.rst  elements.rst  epoch.rst  gym.rst  index.md  plot.rst  propagation.rst  taylor_adaptive.rst  trajopt.rst  tut_basic.rst  tut_trajopt.rst  tutorials.rst  udpla.rst  udplas.rst  utils.rst
_sources/notebooks/: approximations.ipynb  cr3bp_bcp.ipynb  epochs.ipynb  planet.ipynb  pontryagin_cartesian_I.ipynb  pontryagin_cartesian_II.ipynb  pontryagin_cartesian_time.ipynb  pontryagin_equinoctial_mass.ipynb  propagate_lagrangian.ipynb  sims_flanagan_hf_leg.ipynb  sims_flanagan_leg.ipynb  udp_mga.ipynb  udp_mga_1dsm.ipynb  udp_pl2pl.ipynb  udp_pl2pl_N_impulses.ipynb  udp_pl2pl_alpha.ipynb  udp_pl2pl_hf.ipynb  udp_pl2pl_hf_alpha.ipynb  udp_point2point.ipynb  udp_zoh_pl2pl.ipynb  udp_zoh_point2point.ipynb
benchmark/: CMakeLists.txt  convert_anomalies_benchmark.cpp  lambert_problem_benchmark.cpp  leg_sf_benchmark.cpp  leg_sf_benchmark_simple.cpp  leg_sims_flanagan_benchmark.cpp  leg_sims_flanagan_hf_benchmark.cpp  leg_sims_flanagan_hf_udp_bench.hpp  leg_sims_flanagan_udp_bench.hpp  propagate_lagrangian_benchmark.cpp  stm_benchmark.cpp
benchmark/notebooks/: grad.ipynb  sf_gradient.ipynb  zoh_leg.ipynb
doc/: anomalies.rst  api.rst  approximations.rst  bibliography.rst  conf.py  constants.rst  elements.rst  epoch.rst  flyby.rst  gym.rst  index.md  index.rst  lambert.rst  leg.rst  planet.rst  plot.rst  propagation.rst  refs.bib  taylor_adaptive.rst  trajopt.rst  tut_basic.rst  tut_trajopt.rst  tutorials.rst  udpla.rst  udplas.rst  utils.rst
doc/notebooks/: anomalies.ipynb  approximations.ipynb  benchmarkudplaiface.ipynb  cr3bp_bcp.ipynb  epochs.ipynb  interface_to_spice.ipynb  leg_zoh.ipynb  leg_zoh_ss.ipynb  planet.ipynb  plotting.ipynb  pontryagin_cartesian.ipynb  pontryagin_cartesian_I.ipynb  pontryagin_cartesian_II.ipynb  pontryagin_cartesian_mass.ipynb  pontryagin_cartesian_time.ipynb  pontryagin_equinoctial_I.ipynb  pontryagin_equinoctial_mass.ipynb  pontryagin_equinoctial_time.ipynb  primer_vector.ipynb  propagate_lagrangian.ipynb  sandbox.ipynb  sgp4_upla.ipynb  sims_flanagan_hf_leg.ipynb  sims_flanagan_hf_leg_generalised.ipynb  sims_flanagan_hf_leg_nd.ipynb  sims_flanagan_hf_leg_nd_alpha.ipynb  sims_flanagan_hf_leg_problems.json  (+20 more)
include/: epoch.hpp
notebooks/: anomalies.html  approximations.html  benchmarkudplaiface.html  cr3bp_bcp.html  epochs.html  interface_to_spice.html  leg_sims_flanagan.html  leg_zoh.html  leg_zoh_ss.html  planet.html  plotting.html  pontryagin_cartesian.html  pontryagin_cartesian_I.html  pontryagin_cartesian_II.html  pontryagin_cartesian_mass.html  pontryagin_cartesian_time.html  pontryagin_equinoctial_mass.html  pontryagin_equinoctial_time.html  primer_vector.html  propagate_lagrangian.html  sims_flanagan_hf_leg.html  sims_flanagan_leg.html  surrogate_primer_vector.html  ta_cr3bp_bcp.html  ta_zoh_ss.html  udp_cr3bp_hf.html  udp_cr3bp_hf_alpha.html  udp_mga.html  udp_mga_1dsm.html  udp_pl2pl.html  udp_pl2pl_N_impulses.html  udp_pl2pl_alpha.html  udp_pl2pl_hf.html  udp_pl2pl_hf_alpha.html  udp_point2point.html  udp_sf_pl2pl.html  udp_sf_pl2pl_alpha.html  udp_sf_point2point.html  udp_zoh_pl2pl.html  udp_zoh_point2point.html
paper/: paper.md
pykep/: CMakeLists.txt  __init__.py  _patch_planet.py  _version.py  _version.py.in  common_utils.cpp  common_utils.hpp  core.cpp  docstrings.cpp  docstrings.hpp  expose_udplas.cpp  expose_udplas.hpp  python_udpla.cpp  python_udpla.hpp  test.py  test_leg_zoh.py  test_sims_flanagan.py  test_trajopt.py  test_utils.py  test_zoh.py
pykep/trajopt/: CMakeLists.txt  __init__.py  _direct_cr3bp.py  _direct_cr3bp_alpha.py  _direct_nd.py  _direct_nd_alpha.py  _direct_pl2pl.py  _direct_pl2pl_alpha.py  _direct_point2point.py  _launchers.py  _mga.py  _mga_1dsm.py  _min_Bu_bu.py  _pl2pl_N_impulses.py  _point2point.py  _pontryagin_cartesian.py  _pontryagin_equinoctial.py  _primer_vector.py  _sf_pl2pl.py  _sf_pl2pl_alpha.py  _sf_point2point.py  _zoh_pl2pl.py  _zoh_point2point.py  _zoh_ss_point2point.py
pykep/trajopt/gym/: CMakeLists.txt  __init__.py  _cassini_mga.py  _cassini_mga_1dsm.py  _rosetta_mga_1dsm.py  _zoh_cr3bp.json
src/: epoch.cpp  lambert_problem.cpp  linalg.cpp  planet.cpp  stark_problem.cpp  type_name.cpp
test/: CMakeLists.txt  basic_transfers_test.cpp  catch.hpp  convert_anomalies.cpp  convert_anomalies_test.cpp  encodings_test.cpp  epoch_test.cpp  epoch_test_chrono.cpp  eq2par2eq_test.cpp  flyby_test.cpp  ic2eq2ic_test.cpp  ic2par2ic_test.cpp  lambert_problem_test.cpp  leg_sims_flanagan_alpha_test.cpp  leg_sims_flanagan_alpha_udp.hpp  leg_sims_flanagan_hf_alpha_helpers.hpp  leg_sims_flanagan_hf_alpha_test.cpp  leg_sims_flanagan_hf_alpha_udp.hpp  leg_sims_flanagan_hf_helpers.hpp  leg_sims_flanagan_hf_test.cpp  leg_sims_flanagan_hf_udp.hpp  leg_sims_flanagan_test.cpp  leg_sims_flanagan_udp.hpp  lt_kepler_test.cpp  mima_test.cpp  planet_jpl_lp_test.cpp  planet_keplerian_test.cpp  planet_test.cpp  planet_vsop2013_test.cpp  propagate_keplerian_test.cpp  propagate_lagrangian_test.cpp  stark_problem_test.cpp  stm_test.cpp  ta_bcp_test.cpp  ta_cr3bp_test.cpp  ta_pontryagin_cartesian_test.cpp  ta_pontryagin_equinoctial_test.cpp  ta_stark_test.cpp  test_helpers.hpp  udpla_jpl_lp_test.cpp  (+2 more)
tools/: gha_conda_asan.sh  gha_linux_asan_debug.sh  gha_linux_coverage.sh  gha_linux_pykep.sh  gha_osx_debug.sh  gha_osx_pykep.sh
(+114 files in other folders)
